www/css/mobile.css
:root {
  --hair-bright-color: rgb(255, 211, 233);
  --hair-mid-color: rgb(200, 170, 220);
  --hair-dark-color: rgb(108, 121, 178);
  --eye-bright-color: rgb(253, 208, 247);
  --eye-mid-color: rgb(234, 106, 223);
  --eye-dark-color: rgb(58, 30, 109);
  --theme-color: rgb(225, 207, 255);

  --bg-main-color: rgb(255, 252, 254);
  --bg-sub-color: rgb(255, 247, 252);
  --theme-color-glass: rgba(225, 207, 255, 0.5);
  --text-high-color: var(--eye-mid-color);
  --text-main-color: var(--eye-dark-color);
  --text-weak-color: var(--hair-mid-color);
  --line-main-color: var(--hair-mid-color);
}

@media (prefers-color-scheme: dark) {
  :root {
    --bg-main-color: rgb(32, 32, 35);
    --bg-sub-color: rgb(30, 30, 35);
    --theme-color-glass: rgba(0, 0, 0, 0.5);
    --text-high-color: var(--eye-bright-color);
    --text-main-color: var(--theme-color);
    --text-weak-color: var(--hair-dark-color);
    --line-main-color: var(--hair-mid-color);
  }
}
*:not(input) {
  user-select: none;
  -webkit-user-select: none;
}
html {
  -webkit-text-size-adjust: 100%;
  height: 100vh;
}
body {
  height: 100%;
}
html,
body {
  margin: 0;
  padding: 0;
  font-family: system-ui, Meiryo, sans-serif, Arial;
  background: var(--bg-main-color);
  overscroll-behavior: none;
  overflow: hidden;
}
.overlay {
  visibility: visible;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 1;
  background-color: var(--theme-color-glass);
  transition: opacity 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  z-index: 1;
  pointer-events: auto;
}
.overlay.hide {
  opacity: 0;
}
.overlay.hidden {
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
}
.menu {
  position: fixed;
  width: 224px;
  left: 0;
  top: 0;
  bottom: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  background-color: var(--bg-main-color);
  box-shadow: 0 0 0.2rem 0.2rem var(--theme-color-glass);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  z-index: 2;
  color: var(--text-high-color);
  transform: translate(0, 0);
  overscroll-behavior: none;
}
.menu.hidden {
  transform: translate(-224px, 0);
  transition: all 300ms cubic-bezier(0.22, 0.61, 0.36, 1);
  box-shadow: none;
}
.menu.dragging {
  transition: none;
  overflow: hidden;
}
.menu .logo {
  height: 10rem;
  position: relative;
}
.menu .logo div {
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center bottom;
}
.menu .logo .hidden {
  visibility: hidden;
}
.menu .logo .sfw {
  background-image: url(/icon.jpg);
}
.menu .logo .nsfw {
  background-image: url(/ico.jpg);
}
.menu .category {
  padding: 0 0.5rem;
  height: 1.5rem;
  line-height: 1.5rem;
  font-size: 0.75rem;
  background-color: var(--bg-sub-color);
  border-top: 1px dashed var(--line-main-color);
  border-bottom: 1px dashed var(--line-main-color);
}
.menu .item {
  padding: 0.5rem;
  line-height: 2rem;
  font-size: 0.875rem;
  background-color: var(--bg-main-color);
}
.menu .item:last-child {
  border-bottom: none;
}
.menu .item.hidden {
  display: none;
}
.menu .defaultPlayer {
  display: flex;
  flex-direction: column;
}
.menu .defaultPlayer select {
  flex-grow: 1;
  border: none;
  outline: 0;
  font-family: inherit;
  color: inherit;
  background-color: inherit;
  height: inherit;
  font-size: inherit;
  margin-left: 1rem;
}
.list {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  position: fixed;
  padding-top: 4rem;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}
.list > .pre {
  font-size: 0.75rem;
  white-space: pre-wrap;
  font-family: monospace;
  user-select: text;
  -webkit-user-select: text;
}
.list > .error {
  text-align: center;
  height: 100%;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.list .item {
  display: flex;
  flex-direction: column;
  font-size: 0.875rem;
  color: var(--text-main-color);
}
.list .item:nth-child(odd) {
  background-color: var(--bg-sub-color);
}
.list .item:nth-child(even) {
  background-color: var(--bg-main-color);
}
.list .item > div:first-child {
  padding: 1.15rem 0.2rem 0 0.2rem;
  line-height: 1rem;
  overflow-wrap: break-word;
  word-break: break-word;
}
.list .item.watched {
  color: var(--text-weak-color);
}
.list .item .details {
  font-size: 0.75rem;
  line-height: 0.75rem;
  height: 0.75rem;
  display: flex;
  justify-content: space-between;
  padding: 0.2rem;
}
.list .item .details .left {
  color: var(--text-main-color);
  visibility: hidden;
}
.list .item .details .right {
  color: var(--text-main-color);
}
.icon {
  width: 4rem;
  height: 4rem;
  display: flex;
  align-content: center;
  align-items: center;
  justify-content: center;
}
.icon img {
  width: 3rem;
  height: 3rem;
  border: 3px double var(--line-main-color);
  box-sizing: border-box;
  border-radius: 6px;
}
.reload {
  position: fixed;
  display: flex;
  justify-content: center;
  visibility: visible;
  width: 100%;
  height: 2px;
}
.reload div {
  background-color: var(--line-main-color);
  width: 0%;
  height: 100%;
}
.reload.active div {
  background-color: var(--eye-mid-color);
}
.reload.hidden {
  visibility: hidden;
}
.bar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  align-content: center;
  background-color: var(--bg-main-color);
  box-shadow: 0 0 0.2rem 0.2rem var(--bg-main-color);
}
.bar .title {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  padding: 0;
  margin: 0;
  font-size: 1rem;
  line-height: 1.5rem;
  height: 3rem;
  width: 10rem;
  flex-grow: 1;
  color: var(--text-main-color);
}
.bar .title.hidden,
.bar .search.hidden {
  display: none;
}
.bar .search {
  padding: 0;
  margin: 0;
  -webkit-appearance: none;
  outline: 0;
  border: none;
  background: transparent;
  border-radius: 0;
  border-bottom: 1px dashed var(--line-main-color);
  font-size: 1rem;
  height: 3rem;
  width: 10rem;
  flex-grow: 1;
  color: var(--text-main-color);
}

::placeholder {
  color: var(--text-weak-color);
  font-family: system-ui, Meiryo, sans-serif, Arial;
}
button {
  width: 4rem;
  height: 4rem;
  font-size: 0.75rem;
  color: var(--text-weak-color);
  border: 0;
  outline: 0;
  background-color: transparent;
  border-radius: 0.2rem;
  margin: 0;
  padding: 0;
}
button:disabled {
  color: transparent;
}
.progress {
  position: fixed;
  top: 0;
  width: 100%;
  height: 2px;
  visibility: visible;
}
.progress.hidden {
  visibility: hidden;
}
.progress > div {
  position: absolute;
  background-color: var(--line-main-color);
  height: 2px;
}
.progress.hidden > div:first-child,
.progress.hidden > div:last-child {
  animation: none;
}
.progress > div:first-child {
  animation: increase 2s 0.1s infinite;
}
.progress > div:last-child {
  animation: decrease 2s 1s infinite;
}
@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
  .bar {
    backdrop-filter: blur(0.25rem);
    -webkit-backdrop-filter: blur(0.25rem);
    background-color: var(--theme-color-glass);
    box-shadow: 0 0 0.2rem 0.2rem var(--theme-color-glass);
  }
  .bar {
    border-bottom: 1px solid var(--bg-main-color);
  }
}
@keyframes increase {
  from {
    left: -25%;
    width: 25%;
  }
  to {
    left: 130%;
    width: 100%;
  }
}
@keyframes decrease {
  from {
    left: -50%;
    width: 50%;
  }
  to {
    left: 110%;
    width: 10%;
  }
}

